tests/specs/ExportInterfaceAccessors.txt
# mod.ts
export interface Thing {
  get size(): number;
  set size(value: number | string);
}

# diagnostics
error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:1:1
  | 
1 | export interface Thing {
  | ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:2:3
  | 
2 |   get size(): number;
  |   ^


error[missing-jsdoc]: exported symbol is missing JSDoc documentation
 --> /mod.ts:3:3
  | 
3 |   set size(value: number | string);
  |   ^


error[missing-return-type]: exported function is missing an explicit return type annotation
 --> /mod.ts:3:3
  | 
3 |   set size(value: number | string);
  |   ^

# output.txt
Defined in file:///mod.ts:1:1

interface Thing

  size(): number
  size(value: number | string)


# output.json
[
  {
    "kind": "interface",
    "name": "Thing",
    "location": {
      "filename": "file:///mod.ts",
      "line": 1,
      "col": 0,
      "byteIndex": 0
    },
    "declarationKind": "export",
    "interfaceDef": {
      "extends": [],
      "methods": [
        {
          "name": "size",
          "kind": "getter",
          "location": {
            "filename": "file:///mod.ts",
            "line": 2,
            "col": 2,
            "byteIndex": 27
          },
          "optional": false,
          "params": [],
          "returnType": {
            "repr": "number",
            "kind": "keyword",
            "keyword": "number"
          },
          "typeParams": []
        },
        {
          "name": "size",
          "kind": "setter",
          "location": {
            "filename": "file:///mod.ts",
            "line": 3,
            "col": 2,
            "byteIndex": 49
          },
          "optional": false,
          "params": [
            {
              "kind": "identifier",
              "name": "value",
              "optional": false,
              "tsType": {
                "repr": "",
                "kind": "union",
                "union": [
                  {
                    "repr": "number",
                    "kind": "keyword",
                    "keyword": "number"
                  },
                  {
                    "repr": "string",
                    "kind": "keyword",
                    "keyword": "string"
                  }
                ]
              }
            }
          ],
          "returnType": null,
          "typeParams": []
        }
      ],
      "properties": [],
      "callSignatures": [],
      "indexSignatures": [],
      "typeParams": []
    }
  }
]
